--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Omer Akkoca's personal website. Click here and learn more information about Omer Akkoca"
     />
     <link rel="apple-touch-icon" href="./o.png" />
     <link rel="manifest" href="./manifest.json" />
